# MathGP

./: .gitignore  CMakeLists.txt  README.md
GeneratorFiles/: AddNode.xml  BFTraversal.xml  BinaryNode.xml  ConstantNode.xml  DivideNode.xml  InvertNode.xml  LeafNode.xml  LiteralNode.xml  MultiplyNode.xml  NegateNode.xml  Node.xml  RandomGenerator.xml  SingularNode.xml  SubtractNode.xml  TreeFactory.xml  TreeUtils.xml
MathGP/: CMakeLists.txt  Engine.cpp  Engine.h  Source.cpp
MathGPLib/: ArgUtils.cpp  ArgUtils.h  BinaryNode.h  CMakeLists.txt  Candidate.cpp  Candidate.h  CandidateFactory.cpp  CandidateFactory.h  CodeDash.cpp  Logger.h  Mutation.cpp  Mutation.h  ScoreFinder.cpp  ScoreFinder.h
MathGPLib/Grammar/: AddNode.cpp  AddNode.h  BFTraversal.cpp  BFTraversal.h  BinaryNode.h  ConstantNode.cpp  ConstantNode.h  DivideNode.cpp  DivideNode.h  InvertNode.cpp  InvertNode.h  LeafNode.h  LiteralNode.cpp  LiteralNode.h  MultiplyNode.cpp  MultiplyNode.h  NegateNode.cpp  NegateNode.h  Node.h  RandomGenerator.cpp  RandomGenerator.h  ScoreUtils.cpp  ScoreUtils.h  SingularNode.h  SubtractNode.cpp  SubtractNode.h  TreeEncoder.h  TreeFactory.cpp  TreeFactory.h  TreeUtils.cpp  TreeUtils.h
MathGPTests/: CMakeLists.txt
MathGPTests/Helpers/: TestGenerator.h
MathGPTests/Tests/: AddNode_Tests.cpp  BFTraversal_Tests.cpp  Consistency_Tests.cpp  ConstantNode_Tests.cpp  DivideNode_Tests.cpp  Example_Tests.cpp  Generated_Tests.cpp  InvertNode_Tests.cpp  LiteralNode_Tests.cpp  MultiplyNode_Tests.cpp  NegateNode_Tests.cpp  SubtractNode_Tests.cpp  TreeFactory_Tests.cpp  TreeUtils_Tests.cpp
Resources/: config.xml
Resources/Input/: cpu.arff  image.arff
